--- a/src/assets/styles/cmps/SongList.scss
+++ b/src/assets/styles/cmps/SongList.scss
@@ -30,21 +30,26 @@
       padding-right: 10px; // Adds some padding to the right
 
       svg {
-        width: 20px; // Adjust icon size if necessary
-        height: 20px; // Adjust icon size if necessary
+        width: em(16px); // Adjust icon size if necessary
+        height: em(16px); // Adjust icon size if necessary
         fill: #888;
       }
     }
   }
+  hr {
+    border: em(0.6px) solid rgba(255, 255, 255, 0.2);
+    width: 100%;
+  }
 
   .song-header {
     color: #888;
-    font-size: 14px;
+    font-size: em(12px);
     font-weight: bold;
-    border-bottom: 1px solid #888;
+    // border-bottom: 1px solid #888;
+    padding-bottom: 10px;
+    width: 99%;
 
     .song-duration {
-      //make sure the header svg is aligned to the right
       display: flex;
       justify-content: flex-end;
     }
@@ -53,5 +58,18 @@
   .song-container {
     color: #fff;
     font-size: 14px;
+    width: 100%;
+    border-radius: em(5px);
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+  }
+  .song-container.active {
+    background-color: #656465;
+    .song-details {
+      small {
+        color: #fff;
+      }
+    }
   }
 }
