--- a/src/assets/styles/cmps/StationActions.scss
+++ b/src/assets/styles/cmps/StationActions.scss
@@ -3,21 +3,33 @@
   justify-content: start;
   align-self: center;
   align-items: center;
-  gap: em(15px);
+  gap: em(30px);
   min-height: em(70px);
-  padding: em(10px);
+  padding: 0 em(20px);
 
-  button {
-    background-color: $sec-font-clr;
-    color: $main-bg-clr;
+  .play-btn {
+    width: em(70px);
+    height: em(70px);
+    background-color: $logo-clr; /* Use the logo color for the play button */
     border: none;
-    border-radius: em(5px);
-    padding: em(5px) em(10px);
-    font-size: rem(13px);
-    cursor: pointer;
+    border-radius: 500px;
+
+    svg {
+      width: em(25px);
+      height: em(25px);
+    }
   }
-  //last button aligns to the right
-  button:last-child {
+  .more-btn {
+    background-color: transparent;
+    border: none;
+    svg {
+      width: em(27px);
+      height: em(27px);
+      fill: $sec-font-clr;
+    }
+  }
+
+  .change-view {
     margin-left: auto;
   }
 }
