--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -59,3 +59,4 @@
 @import "cmps/VolumeBar.scss";
 @import "cmps/MiniPreview.scss";
 @import "cmps/StationEditModal.scss";
+@import "cmps/DropDownMenu.scss";
