--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -11,3 +11,10 @@
   font-weight: 300;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "CircularSpotifyTextBold";
+  src: url("../fonts/CircularSpotifyText-Bold.otf") format("opentype");
+  font-weight: 700;
+  font-style: bold;
+}
