--- a/src/assets/styles/cmps/SearchResults.scss
+++ b/src/assets/styles/cmps/SearchResults.scss
@@ -11,7 +11,7 @@
   .search-results {
     display: grid;
     grid-template-columns: 1fr 3fr;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: 1fr 1fr 1fr;
     gap: em(10px);
     //set to start from top of the cell
 
