--- a/src/assets/styles/cmps/StationResults.scss
+++ b/src/assets/styles/cmps/StationResults.scss
@@ -1,17 +1,15 @@
 .station-results {
-  max-height: 300px;
-  overflow: hidden;
-  padding: 0;
-  margin: 0;
-
   .station-results-container {
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-rows: fit-content;
+
+    gap: 1em;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
 
     .station-card {
-      flex: auto;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -19,19 +17,22 @@
 
       .station-img {
         position: relative;
-        width: 16dvh;
-        height: 16dvh;
-        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1/1;
         display: flex;
         justify-content: center;
         align-items: center;
+        border-radius: 5%;
+        box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+        overflow: hidden;
+        max-height: 150px;
+        max-width: 150px;
 
         img {
           width: 100%;
           height: 100%;
           object-fit: cover;
-          border-radius: 10%;
-          box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
         }
 
         .play-btn {
@@ -41,21 +42,20 @@
           width: 0;
           height: 0;
           opacity: 0;
-          bottom: em(8px);
           background-color: $logo-clr;
           border: none;
-          border-radius: 500px;
+          border-radius: 50%;
         }
       }
 
-      border-radius: em(8px);
-      padding: em(10px);
+      border-radius: 8px;
+      padding: 10px;
       &:hover {
         background-color: #242424;
 
         .play-btn {
-          width: em(40px);
-          height: em(40px);
+          width: 40px;
+          height: 40px;
           opacity: 1;
           display: flex;
           align-items: center;
@@ -65,11 +65,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            * {
-              display: flex;
-              justify-content: center;
-              align-items: center;
-            }
           }
           svg {
             width: 20px;
