--- a/src/assets/styles/cmps/StationResults.scss
+++ b/src/assets/styles/cmps/StationResults.scss
@@ -3,7 +3,6 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     grid-template-rows: fit-content;
-
     gap: 1em;
     padding: 0;
     margin: 0;
@@ -48,8 +47,8 @@
         }
       }
 
-      border-radius: 8px;
-      padding: 10px;
+      border-radius: em(8px);
+      padding: em(10px);
       &:hover {
         background-color: #242424;
 
