--- a/src/assets/styles/cmps/StationResults.scss
+++ b/src/assets/styles/cmps/StationResults.scss
@@ -2,7 +2,7 @@
   .station-results-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    grid-template-rows: fit-content;
+    grid-template-rows: 1fr;
     gap: 1em;
     padding: 0;
     margin: 0;
@@ -13,24 +13,26 @@
       flex-direction: column;
       justify-content: center;
       position: relative;
+      border-radius: 8px;
+      padding: 10px;
 
       .station-img {
         position: relative;
         width: 100%;
-        height: 100%;
-        aspect-ratio: 1/1;
+        padding-top: 100%; /* This ensures a 1:1 aspect ratio */
         display: flex;
         justify-content: center;
         align-items: center;
-        border-radius: 5%;
         box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
         overflow: hidden;
-        max-height: 150px;
-        max-width: 150px;
 
         img {
+          position: absolute;
+          top: 0;
+          left: 0;
           width: 100%;
           height: 100%;
+          border-radius: 5%;
           object-fit: cover;
         }
 
