add text wrap to the station result

--- a/src/assets/styles/cmps/StationResults.scss
+++ b/src/assets/styles/cmps/StationResults.scss
@@ -16,6 +16,11 @@
       border-radius: 8px;
       padding: 10px;
 
+      p {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
       .station-img {
         position: relative;
         width: 100%;
