--- a/src/assets/styles/cmps/Catalog.scss
+++ b/src/assets/styles/cmps/Catalog.scss
@@ -17,45 +17,51 @@
         font-size: em(14px);
     }
 
-    .list-container {
-        max-height: em(220px);
-        overflow: hidden;
-    }
-
     .station-list {
-        display: flex;
-        justify-content: space-between;
 
-        flex-wrap: wrap;
-        gap: em(10px);
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+        grid-auto-rows: fit-content;
+        column-gap: em(1px);
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
+
 
         .station-preview {
+
             display: flex;
             flex-direction: column;
-            gap: em(10px);
-            align-items: center;
-
-            flex-grow: 1;
-            flex-shrink: 1;
-            flex-basis: 20%;
+            justify-content: center;
+            position: relative;
+            border-radius: 8px;
+            padding: 10px;
+            row-gap: em(5px);
 
             .img-container {
+
+                position: relative;
+                width: 100%;
+                padding-top: 100%;
+                /* This ensures a 1:1 aspect ratio */
+                overflow: hidden;
                 display: flex;
+                box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
                 justify-content: center;
                 align-items: center;
-                width: em(150px);
-                height: em(150px);
-                overflow: hidden;
                 border-radius: em(6px);
 
                 img {
-                    box-shadow: 0 8px 24px rgba(0, 0, 0, .5);
+
                     min-width: 100%;
                     min-height: 100%;
                     object-fit: cover;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
                 }
             }
-
         }
     }
+
 }
