--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -17,9 +17,17 @@
     // padding-right: rem(8px);
     // padding-left: rem(8px);
     border-radius: rem(8px);
-
     background-color: $sec-bg-clr;
     // padding: 0 em(15px) em(15px) em(15px);
+
+    &::-webkit-scrollbar {
+      background-color: transparent;
+      scrollbar-width: thin;
+    }
+
+    &:hover::-webkit-scrollbar-thumb {
+      background: #555;
+    }
   }
 
   .app-footer {
