--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -51,7 +51,7 @@
 
   @include for-normal-layout {
     grid-template-columns: auto 1fr;
-    grid-template-rows: 1fr auto;
+    grid-template-rows: 12fr 1fr;
 
     width: 100%;
     height: 100%;
