--- a/src/assets/styles/cmps/StationHeader.scss
+++ b/src/assets/styles/cmps/StationHeader.scss
@@ -15,8 +15,8 @@
       position: relative;
       width: 100px;
       height: 100px;
-      box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.4);
-      border-radius: 5%;
+      box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.3);
+      border-radius: 5px;
       overflow: hidden;
 
       img {
