-style- add songs cmp

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -60,3 +60,4 @@
 @import "cmps/MiniPreview.scss";
 @import "cmps/StationEditModal.scss";
 @import "cmps/DropDownMenu.scss";
+@import "cmps/AddSongs.scss";
