--- a/src/assets/styles/cmps/DropDownMenu.scss
+++ b/src/assets/styles/cmps/DropDownMenu.scss
@@ -1,17 +1,19 @@
 .dropdown {
   position: relative;
   display: inline-block;
+  width: 100%;
 }
 
 .dropdown-toggle {
   background-color: transparent;
   color: $sec-font-clr;
-  padding: 8px 16px;
+  padding: 8px 12px;
   cursor: pointer;
   display: flex;
   align-items: center;
   gap: 8px;
   justify-content: space-between; // Ensures the arrow is on the right
+  width: 100%;
 
   .dropdown-icon {
     fill: $sec-font-clr;
@@ -21,11 +23,12 @@
     margin-left: 8px;
   }
 }
+
 .dropdown-menu-container {
   background-color: $sec-bg-clr;
   display: block;
   position: absolute;
-  min-width: 160px;
+  min-width: 100%;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
   z-index: 1;
   padding: 0;
@@ -34,40 +37,42 @@
   right: 0; // Ensure it appears aligned to the right
 
   h3 {
-    padding: 12px 16px;
+    padding: 10px 12px;
     margin: 0;
     background-color: $sec-bg-clr;
     color: $sec-font-clr;
-    font-size: 0.875rem;
+    font-size: 0.75rem;
   }
 
   .dropdown-menu {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 
     li {
-      padding: 12px 16px;
+      padding: 10px 12px;
       text-decoration: none;
       display: flex;
       align-items: center;
       cursor: pointer;
       color: $sec-font-clr;
+
       svg {
         fill: $sec-font-clr;
-      }
-
-      &:last-child {
-        text-align: right; // Ensure last child is right-aligned
       }
 
       &:hover {
         background-color: darken($sec-bg-clr, 10%);
       }
     }
+
     li.selected {
       color: $logo-clr;
+
       svg {
         fill: $logo-clr;
       }
+
       .tick-icon {
         fill: $logo-clr;
         margin-left: auto; // Align the icon to the right
@@ -80,4 +85,25 @@
   margin-right: 8px; // Space between icon and label
   width: 16px; // Adjust size as needed
   height: 16px; // Adjust size as needed
+}
+
+// Desktop and larger devices
+@media (min-width: 768px) {
+  .dropdown-toggle {
+    padding: 8px 16px;
+  }
+
+  .dropdown-menu-container {
+    min-width: 160px;
+    width: auto;
+  }
+
+  .dropdown-menu li {
+    padding: 12px 16px;
+  }
+
+  h3 {
+    padding: 12px 16px;
+    font-size: 0.875rem;
+  }
 }
