add comments to the drop down menu

--- a/src/assets/styles/cmps/DropDownMenu.scss
+++ b/src/assets/styles/cmps/DropDownMenu.scss
@@ -35,11 +35,11 @@
   margin: 0;
   top: 100%; // Ensure it appears below the toggle
   right: 0; // Ensure it appears aligned to the right
+  border-radius: 5px;
 
   h3 {
     padding: 10px 12px;
     margin: 0;
-    background-color: $sec-bg-clr;
     color: $sec-font-clr;
     font-size: 0.75rem;
   }
