--- a/src/assets/styles/cmps/Library.scss
+++ b/src/assets/styles/cmps/Library.scss
@@ -6,38 +6,46 @@
   .library-container {
     display: flex;
     flex-direction: column;
+    justify-content: stretch;
 
-    .library-header {
-      grid-column: 1;
-    }
+
+    // .library-header {}
 
     .station-list {
-      grid-column: 2;
-    }
+      row-gap: em(10px);
+      display: flex;
+      flex-direction: column;
 
-    .station-preview {
-      display: grid;
-      grid-template-columns: 2;
-      grid-template-rows: 2;
+      .station-preview {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
 
-      /*ask about if we need to open separeted file for preview style*/
-      img {
-        grid-column: 1;
-        grid-row: 1/3;
-        width: em(48px);
-        height: em(48px);
-        object-fit: cover;
-        border-radius: $station-img-border-radius;
-      }
+        .img-container {
+          display: flex;
+          // justify-content: center;
+          align-items: center;
 
-      .station-name {
-        grid-column: 2;
-        grid-row: 1;
-      }
+          img {
+            width: em(40px);
+            height: em(40px);
+            object-fit: cover;
+            border-radius: 10%;
+          }
+        }
 
-      .station-creator {
-        grid-column: 2;
-        grid-row: 2;
+        .info-container {
+          display: flex;
+          justify-content: center;
+
+          .station-name {
+            color: white;
+            font-size: em(13px);
+          }
+
+          .station-creator {
+            font-size: em(11px);
+          }
+        }
       }
     }
   }
