Add context menu and right click on a song in the station page

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -61,3 +61,4 @@
 @import "cmps/StationEditModal.scss";
 @import "cmps/DropDownMenu.scss";
 @import "cmps/AddSongs.scss";
+@import "cmps/ContextMenu.scss";
