--- a/src/assets/styles/cmps/Catalog.scss
+++ b/src/assets/styles/cmps/Catalog.scss
@@ -6,7 +6,6 @@
   .title-container {
     display: flex;
     justify-content: space-between;
-    // align-items: center;
     height: em(40px);
 
     h3 {
@@ -23,9 +22,9 @@
   .station-list {
 
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-    grid-auto-rows: fit-content;
-    column-gap: em(1px);
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-rows: 1fr;
+    gap: 1em;
     padding: 0;
     margin: 0;
     overflow: hidden;
@@ -40,6 +39,7 @@
       border-radius: 8px;
       padding: 10px;
       row-gap: em(5px);
+
 
       .img-container {
 
@@ -56,12 +56,13 @@
 
         img {
 
-          min-width: 100%;
-          min-height: 100%;
+          width: 100%;
+          height: 100%;
           object-fit: cover;
           position: absolute;
           top: 0;
           left: 0;
+          border-radius: 5%;
         }
       }
     }
