Add style To miniPreview in homepage

--- a/src/assets/styles/cmps/MiniPreview.scss
+++ b/src/assets/styles/cmps/MiniPreview.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     border-radius: em(3px);
-    background-color: $secondary-main-clr;
+    background-color: #28282890;
 
     img {
         width: em(50px);
