Hide playbtn in navbar

--- a/src/assets/styles/cmps/NavBar.scss
+++ b/src/assets/styles/cmps/NavBar.scss
@@ -85,6 +85,10 @@
       padding: em(10px);
       overflow-y: scroll;
 
+      .play-btn {
+        display: none;
+      }
+
       .library-header {
         display: grid;
         grid-template-columns: auto auto;
