--- a/src/assets/styles/cmps/StationResults.scss
+++ b/src/assets/styles/cmps/StationResults.scss
@@ -2,11 +2,12 @@
   .station-results-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    grid-template-rows: 1fr;
     gap: 1em;
     padding: 0;
     margin: 0;
     overflow: hidden;
+    width: 100%; // Removed in version 2
+    height: auto; // Removed in version 2
 
     .station-card {
       display: flex;
