--- a/src/assets/styles/cmps/SongResults.scss
+++ b/src/assets/styles/cmps/SongResults.scss
@@ -20,9 +20,9 @@
     grid-template-rows: 1fr;
     border-radius: 5px;
     gap: 15px;
-    max-height: 70px;
+    max-height: em(60px);
+    padding-left: em(16px);
     width: 100%;
-    padding: em(10px);
     align-items: center;
     overflow: hidden;
     .song-img {
