--- a/src/assets/styles/cmps/Library.scss
+++ b/src/assets/styles/cmps/Library.scss
@@ -55,5 +55,25 @@
         }
       }
     }
+
+    .compact {
+
+      row-gap: 0;
+
+      .station-preview {
+
+
+        .info-container {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          column-gap: em(6px);
+        }
+
+        .img-container {
+          display: none;
+        }
+      }
+    }
   }
 }
