--- a/src/assets/styles/cmps/SongResults.scss
+++ b/src/assets/styles/cmps/SongResults.scss
@@ -1,10 +1,11 @@
 .song-results {
-  height: 100%;
+  position: relative;
   width: 100%;
+  max-height: 30vh;
+
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: auto auto;
-  justify-content: space-between;
+
   gap: 0px;
   .song-header {
     h1 {
