--- a/src/assets/styles/cmps/NavBar.scss
+++ b/src/assets/styles/cmps/NavBar.scss
@@ -1,5 +1,4 @@
 .nav-bar {
-
   /*  mobile display */
 
   display: flex;
@@ -7,8 +6,6 @@
   gap: em(8px);
   min-width: em(75px);
   overflow: hidden;
-  margin-left: rem(5px);
-  margin-right: rem(5px);
 
   .nav-options {
     display: flex;
@@ -21,18 +18,14 @@
   }
 
   //all the children of the nav-bar border-radius
-  >* {
+  > * {
     border-radius: em(8px);
     background-color: $sec-bg-clr;
   }
-
-
 }
 
 @include for-normal-layout {
   .nav-bar {
-
-
     svg {
       height: em(16px);
       width: em(16px);
@@ -84,6 +77,8 @@
       width: 100%;
       height: 100%;
       padding: em(10px);
+      overflow: hidden;
+
       overflow-y: scroll;
 
       .play-btn {
@@ -113,7 +108,6 @@
             height: em(12px);
             width: em(12px);
             fill: $sec-font-clr;
-
           }
 
           button {
@@ -122,7 +116,6 @@
             border-radius: 50%;
             border: none;
             aspect-ratio: 1/1;
-
           }
 
           button:hover {
