--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -11,9 +11,14 @@
   overflow: hidden;
 }
 
+.nav-bar-cotent {
+  width: 100%;
+  height: 100%;
+}
 .nav-bar {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 .separator {
