--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -63,6 +63,8 @@ a {
 svg {
   min-width: 15px;
   min-height: 15px;
+  fill: $main-font-clr;
+  background-color: transparent;
 }
 
 /* Adjusting h1 within specified elements */
