--- a/src/assets/styles/cmps/VolumeBar.scss
+++ b/src/assets/styles/cmps/VolumeBar.scss
@@ -1,5 +1,10 @@
 .volume-bar {
+  padding: 0;
+  margin: 0;
   width: em(100px);
+  display: flex;
+  align-items: center;
+
   .volume-bar-track {
     color: #fff;
   }
