change song result list style and buttons in the stationpage

--- a/src/assets/styles/cmps/Player.scss
+++ b/src/assets/styles/cmps/Player.scss
@@ -49,6 +49,7 @@
       svg {
         width: rem(16px); /* Set width of SVG icon */
         height: rem(16px); /* Set height of SVG icon */
+        fill: black; /* Set fill color of SVG icon */
       }
     }
     .play-btn {
