--- a/src/assets/styles/cmps/Recommendations.scss
+++ b/src/assets/styles/cmps/Recommendations.scss
@@ -1,64 +1,66 @@
 .recommendations-container {
 
     container-type: inline-size; // for container query
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: em(5px);
     margin: em(4px);
     min-width: em(400px);
 
-    .mini-preview {
-        flex-grow: 1;
-        flex-shrink: 1;
-        flex-basis: 49%;
+    .content {
 
-        .play-btn {
+        display: grid;
+        grid-template-columns: minmax(200px, 1fr) minmax(200px, 1fr);
+        gap: em(5px);
 
-            display: flex;
-            visibility: hidden;
-            background-color: $logo-clr;
-            border: none;
-            border-radius: 50%;
-            width: em(80px);
-            aspect-ratio: 1/1;
-            opacity: 1;
-            margin-right: em(10px);
-            align-items: center;
-            justify-content: center;
-            box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+        .mini-preview {
 
+            .play-btn {
 
-            * {
                 display: flex;
-                justify-content: center;
+                visibility: hidden;
+                background-color: $logo-clr;
+                border: none;
+                border-radius: 50%;
+                width: em(80px);
+                aspect-ratio: 1/1;
+                opacity: 1;
+                margin-right: em(10px);
                 align-items: center;
-            }
+                justify-content: center;
+                box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 
-            svg {
-                width: em(18px);
-                height: em(18px);
+
+                * {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                svg {
+                    width: em(18px);
+                    height: em(18px);
+                }
+
+                &:hover {
+                    width: em(85px);
+                }
             }
 
             &:hover {
-                width: em(85px);
-            }
-        }
+                background-color: rgba(159, 157, 157, 0.375);
+                transition: background-color 0.5s;
 
-        &:hover {
-            background-color: rgba(159, 157, 157, 0.375);
-            transition: background-color 0.5s;
-
-            .play-btn {
-                visibility: visible;
+                .play-btn {
+                    visibility: visible;
+                }
             }
         }
     }
 
-    @container (min-width: 700px) {
-        .mini-preview {
-            flex-basis: 24%;
+    @container (min-width: 600px) {
+
+        .content {
+            grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);
         }
+
     }
 
 
