--- a/src/assets/styles/cmps/SongResults.scss
+++ b/src/assets/styles/cmps/SongResults.scss
@@ -17,25 +17,26 @@
   .song-result {
     flex: 2;
     display: grid;
-    grid-template-columns: 8% 63% 25%; /* Adjusted grid-template-columns */
+    grid-template-columns: 8fr 63fr 25fr; /* Adjusted grid-template-columns */
     grid-template-rows: 1fr;
     border-radius: 5px;
-    gap: 15px;
     max-height: em(60px);
     padding-left: em(16px);
     width: 100%;
     align-items: center;
-    overflow: hidden;
     .song-img {
       position: relative; // Ensure positioning context for absolute positioning of play button
       width: em(40px);
       height: em(40px);
       border-radius: em(5px);
+      margin-right: em(5px);
+      aspect-ratio: 1/1; // Maintain 1:1 aspect ratio
       overflow: hidden; // Ensure the play button doesn't overflow the image wrapper
       img {
         width: 100%;
         height: 100%;
         border-radius: em(5px);
+        object-fit: cover;
       }
       .play-btn {
         border: none;
@@ -69,7 +70,7 @@
       color: $sec-font-clr;
       padding: 5px;
       svg {
-        fill: $sec-bg-clr;
+        fill: transparent;
         transition: transform 0.2s;
 
         &:active {
@@ -79,14 +80,7 @@
           transform: scale(0.9);
         }
       }
-      .added {
-        svg {
-          fill: $logo-clr;
-          &:hover {
-            fill: $logo-clr;
-          }
-        }
-      }
+
       .duration {
         font-size: 0.875rem;
         display: block;
@@ -151,18 +145,15 @@
 }
 
 .song-result.active {
+  .song-info {
+    small {
+      color: #fff;
+    }
+  }
   .song-actions {
     svg {
       fill: $sec-font-clr;
       cursor: pointer;
-    }
-    .added {
-      svg {
-        fill: $logo-clr;
-        &:hover {
-          fill: $logo-clr;
-        }
-      }
     }
   }
   background-color: #656465;
