--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -64,3 +64,4 @@
 @import "cmps/ContextMenu.scss";
 @import "cmps/Loader.scss";
 @import "cmps/StationsMenu.scss";
+@import "cmps/AddToStationButton.scss";
